--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ media
 venv
 .idea
 .vscode
+reports/
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
