--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.8.1
+chardet==5.2.0
 Django==5.1.3
 djangorestframework==3.15.2
+pillow==11.0.0
 psycopg2==2.9.10
+reportlab==4.2.5
 sqlparse==0.5.2
