--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ venv
 .idea
 .vscode
 reports/
+TestQuerys.sql
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
