--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ venv
 .vscode
 reports/
 TestQuerys.sql
+.env
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
