--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ packaging==24.2
 pandas==2.2.3
 pillow==11.0.0
 prompt_toolkit==3.0.48
+psycopg2-binary==2.9.10
 PyJWT==2.10.0
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
