--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ psycopg2-binary==2.9.10
 PyJWT==2.10.0
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
 redis==5.2.1
