--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ click-repl==0.3.0
 contourpy==1.3.1
 cycler==0.12.1
 Django==5.1.3
+django-redis==5.4.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.8
