--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
+markers = order: mark test to run in a specific order
 DJANGO_SETTINGS_MODULE = gestioneventos.settings.local
 python_files = tests.py tests_*.py test_*.py *_tests.py
