--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ pyparsing==3.2.0
 pytest==8.3.4
 pytest-django==4.9.0
 pytest-factoryboy==2.7.0
+pytest-ordering==0.6
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
