--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,3 @@
 [pytest]
-markers = order: mark test to run in a specific order
 DJANGO_SETTINGS_MODULE = gestioneventos.settings.local
-python_files = tests.py tests_*.py test_*.py *_tests.py
+python_files = tests.py tests_*.py test_*.py *_tests.py *_test.py
