Add uv.lock to .gitignore Add pyproject.toml

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ venv
 TestQuerys.sql
 .env
 media/
+uv.lock
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
