--- a/event-horizon-backend/appsettings.json
+++ b/event-horizon-backend/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=net;Username=your_user;Password=your_password;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
