--- a/event-horizon-backend/event-horizon-backend.csproj
+++ b/event-horizon-backend/event-horizon-backend.csproj
@@ -8,7 +8,22 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="src\Modules\Events\DTO\AdminDTO\" />
+      <Folder Include="src\Modules\Events\Services\" />
+      <Folder Include="src\Modules\Events\Tests\" />
+      <Folder Include="Tests\" />
+      <Folder Include="wwwroot\images\" />
     </ItemGroup>
 
 </Project>
