Add JWT configuration and refactor Program.cs for improved service setup

--- a/event-horizon-backend/appsettings.json
+++ b/event-horizon-backend/appsettings.json
@@ -2,6 +2,16 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=net;Username=your_user;Password=your_password;"
   },
+  "JWT": {
+    "ValidAudience": "http://localhost:5000",
+    "ValidIssuer": "http://localhost:5000",
+    "Secret": "YourSecretKeyHereShouldBeAtLeast32CharactersLong",
+    "TokenValidityInMinutes": 60,
+    "RefreshTokenValidityInDays": 7
+  },
+  "Global": {
+    "Production": false
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
