Add Redis caching support and update appsettings for connection strings

--- a/event-horizon-backend/appsettings.json
+++ b/event-horizon-backend/appsettings.json
@@ -1,6 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=net;Username=your_user;Password=your_password;"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=net;Username=your_user;Password=your_password;",
+    "RedisConnection": "localhost:6379"
+  },
+  "Redis": {
+    "InstanceName": "event-horizon-backend:",
+    "DefaultExpirationInMinutes": 5
   },
   "JWT": {
     "ValidAudience": "http://localhost:5000",
