--- a/event-horizon-backend/event-horizon-backend.csproj
+++ b/event-horizon-backend/event-horizon-backend.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
         <PackageReference Include="EnyimMemcachedCore" Version="3.3.2" />
+        <PackageReference Include="MailKit" Version="4.11.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.15" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.15" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
@@ -25,9 +26,15 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="src\Core\Mail\Services\" />
+      <Folder Include="src\Modules\Authentication\Tests\" />
       <Folder Include="src\Modules\Events\DTO\AdminDTO\" />
       <Folder Include="src\Modules\Events\Services\" />
       <Folder Include="src\Modules\Events\Tests\" />
+      <Folder Include="src\Modules\Users\Controllers\" />
+      <Folder Include="src\Modules\Users\Mappers\" />
+      <Folder Include="src\Modules\Users\Services\" />
+      <Folder Include="src\Modules\Users\Tests\" />
       <Folder Include="Tests\" />
       <Folder Include="wwwroot\images\" />
     </ItemGroup>
