Add email verification token generation and caching support in AuthController

--- a/event-horizon-backend/appsettings.json
+++ b/event-horizon-backend/appsettings.json
@@ -4,8 +4,19 @@
     "RedisConnection": "localhost:6379"
   },
   "Redis": {
+    "Enabled": true,
     "InstanceName": "event-horizon-backend:",
     "DefaultExpirationInMinutes": 5
+  },
+  "MailSettings": {
+    "Host": "smtp.ethereal.email",
+    "Port": 587,
+    "EnableSsl": true,
+    "UserName": "oswaldo12@ethereal.email",
+    "Password": "mCX3PVrKWzNNNC8nTh",
+    "From": "oswaldo12@ethereal.email",
+    "DisplayName": "E-Event Horizon",
+    "AppUrl": "http://localhost:5291"
   },
   "JWT": {
     "ValidAudience": "http://localhost:5000",
