Enhance JWT authentication and error handling in EventController and Startup

--- a/event-horizon-backend/event-horizon-backend.csproj
+++ b/event-horizon-backend/event-horizon-backend.csproj
@@ -36,6 +36,7 @@
         <Folder Include="src\Modules\Events\DTO\AdminDTO\"/>
         <Folder Include="src\Modules\Events\Services\"/>
         <Folder Include="src\Modules\Events\Tests\"/>
+        <Folder Include="src\Modules\Users\DTO\" />
         <Folder Include="src\Modules\Users\Mappers\"/>
         <Folder Include="src\Modules\Users\Services\" />
         <Folder Include="src\Modules\Users\Tests\"/>
