Added Environments Variables

--- a/event-horizon-backend/appsettings.json
+++ b/event-horizon-backend/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=net;Username=your_user;Password=your_password;",
-    "RedisConnection": "localhost:6379"
+    "DefaultConnection": "Host={DB_HOST};Port={DB_PORT};Database={DB_NAME};Username={DB_USER};Password={DB_PASSWORD};",
+    "RedisConnection": "{REDIS_CONNECTION}"
   },
   "Redis": {
     "Enabled": true,
@@ -9,20 +9,20 @@
     "DefaultExpirationInMinutes": 5
   },
   "MailSettings": {
-    "Host": "smtp.ethereal.email",
-    "Port": 587,
+    "Host": "{MAIL_HOST}",
+    "Port": "{MAIL_PORT}",
     "EnableSsl": true,
-    "UserName": "oswaldo12@ethereal.email",
-    "Password": "mCX3PVrKWzNNNC8nTh",
-    "From": "oswaldo12@ethereal.email",
+    "UserName": "{MAIL_USER}",
+    "Password": "{MAIL_PASSWORD}",
+    "From": "{MAIL_USER}",
     "DisplayName": "E-Event Horizon",
     "AppUrl": "http://localhost:5291"
   },
   "JWT": {
     "ValidAudience": "http://localhost:5000",
     "ValidIssuer": "http://localhost:5000",
-    "Secret": "YourSecretKeyHereShouldBeAtLeast32CharactersLong",
-    "TokenValidityInMinutes": 60,
+    "Secret": "{JWT_SECRET}",
+    "TokenValidityInMinutes": "{JWT_VALIDITY_MINUTES}",
     "RefreshTokenValidityInDays": 7
   },
   "Global": {
