Add Category management functionality with CRUD operations

--- a/event-horizon-backend/event-horizon-backend.csproj
+++ b/event-horizon-backend/event-horizon-backend.csproj
@@ -29,9 +29,7 @@
     <ItemGroup>
         <Folder Include="src\Common\Interfaces\" />
         <Folder Include="src\Modules\Authentication\Tests\"/>
-        <Folder Include="src\Modules\Category\DTO\"/>
-        <Folder Include="src\Modules\Category\Mappers\"/>
-        <Folder Include="src\Modules\Category\Models\"/>
+        <Folder Include="src\Modules\Category\DTO\PublicDTO\" />
         <Folder Include="src\Modules\Category\Services\"/>
         <Folder Include="src\Modules\Category\Tests\"/>
         <Folder Include="src\Modules\Events\DTO\AdminDTO\"/>
