--- a/event-horizon-backend/event-horizon-backend.csproj
+++ b/event-horizon-backend/event-horizon-backend.csproj
@@ -33,8 +33,9 @@
         <Folder Include="src\Modules\Category\Services\"/>
         <Folder Include="src\Modules\Category\Tests\"/>
         <Folder Include="src\Modules\Events\DTO\AdminDTO\"/>
-        <Folder Include="src\Modules\Events\Services\"/>
+        <Folder Include="src\Modules\Events\Services\" />
         <Folder Include="src\Modules\Events\Tests\"/>
+        <Folder Include="src\Modules\Organizer\" />
         <Folder Include="src\Modules\Public\DTO\" />
         <Folder Include="src\Modules\Public\Mappers\" />
         <Folder Include="src\Modules\Public\Services\" />
