--- a/event-horizon-backend/event-horizon-backend.csproj
+++ b/event-horizon-backend/event-horizon-backend.csproj
@@ -33,12 +33,15 @@
         <Folder Include="src\Modules\Category\Services\"/>
         <Folder Include="src\Modules\Category\Tests\"/>
         <Folder Include="src\Modules\Events\DTO\AdminDTO\"/>
-        <Folder Include="src\Modules\Events\Services\" />
         <Folder Include="src\Modules\Events\Tests\"/>
-        <Folder Include="src\Modules\Organizer\" />
+        <Folder Include="src\Modules\Organizer\Controllers\" />
+        <Folder Include="src\Modules\Organizer\DTO\" />
+        <Folder Include="src\Modules\Organizer\Mappers\" />
+        <Folder Include="src\Modules\Organizer\Models\" />
+        <Folder Include="src\Modules\Organizer\Services\" />
+        <Folder Include="src\Modules\Organizer\Tests\" />
         <Folder Include="src\Modules\Public\DTO\" />
         <Folder Include="src\Modules\Public\Mappers\" />
-        <Folder Include="src\Modules\Public\Services\" />
         <Folder Include="src\Modules\Public\Tests\" />
         <Folder Include="src\Modules\Users\DTO\" />
         <Folder Include="src\Modules\Users\Mappers\"/>
