--- a/event-horizon-backend/event-horizon-backend.csproj
+++ b/event-horizon-backend/event-horizon-backend.csproj
@@ -28,17 +28,16 @@
 
     <ItemGroup>
         <Folder Include="src\Common\Interfaces\" />
+        <Folder Include="src\Core\Services\" />
         <Folder Include="src\Modules\Authentication\Tests\"/>
         <Folder Include="src\Modules\Category\DTO\PublicDTO\" />
         <Folder Include="src\Modules\Category\Services\"/>
         <Folder Include="src\Modules\Category\Tests\"/>
         <Folder Include="src\Modules\Events\DTO\AdminDTO\"/>
         <Folder Include="src\Modules\Events\Tests\"/>
-        <Folder Include="src\Modules\Organizer\Controllers\" />
         <Folder Include="src\Modules\Organizer\DTO\" />
         <Folder Include="src\Modules\Organizer\Mappers\" />
         <Folder Include="src\Modules\Organizer\Models\" />
-        <Folder Include="src\Modules\Organizer\Services\" />
         <Folder Include="src\Modules\Organizer\Tests\" />
         <Folder Include="src\Modules\Public\DTO\" />
         <Folder Include="src\Modules\Public\Mappers\" />
@@ -48,7 +47,7 @@
         <Folder Include="src\Modules\Users\Services\" />
         <Folder Include="src\Modules\Users\Tests\"/>
         <Folder Include="Tests\"/>
-        <Folder Include="wwwroot\images\"/>
+        <Folder Include="wwwroot\images\" />
         <None Include="Templates\Emails\**">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
