--- a/event-horizon-backend/appsettings.json
+++ b/event-horizon-backend/appsettings.json
@@ -4,7 +4,7 @@
     "RedisConnection": "{REDIS_CONNECTION}"
   },
   "Redis": {
-    "Enabled": true,
+    "Enabled": false,
     "InstanceName": "event-horizon-backend:",
     "DefaultExpirationInMinutes": 5
   },
